2008-07-14  Sam Steingold  <sds@gnu.org>

	src/m4/sigsegv.m4 --> src/glm4/libsigsegv.m4
	* Makefile.devel (gnulib-imported): also import libsigsegv
	* configure: use gl_cv_lib_sigsegv instead of cl_cv_lib_sigsegv
	* configure.in: use gl_LIBSIGSEGV instead of CL_SIGSEGV
	* lispbibl.d: use HAVE_LIBSIGSEGV instead of NO_SIGSEGV
	* makemake.in (XCFLAGS): do not add NO_SIGSEGV
	* src/m4/sigsegv.m4: remove
	* src/glm4/libsigsegv.m4: add
	* gllib/Makefile.am, glm4/gnulib-cache.m4, glm4/gnulib-comp.m4:
	regenerate

2008-07-13  Sam Steingold  <sds@gnu.org>

	* error.d (error_illegal_arg): new function
	* lispbibl.d (error_illegal_arg): declare
	* constobj.d (type_buffered_arg): add for stream.d:test_buffered_arg
	* stream.d (test_buffered_arg, test_eltype_arg, check_float_eltype):
	use error_illegal_arg
	* encoding.d (MAKE-ENCODING): ditto
	* pathname.d (check_direction, check_if_does_not_exist)
	(check_if_exists, DIRECTORY): ditto
	* hashtabl.d: fix an error message case

2008-07-13  Sam Steingold  <sds@gnu.org>

	* encoding.d (base64_wcstombs): set CHARSET-TYPE-ERROR slots DATUM
	and EXPECTED-TYPE
	(error_incomplete, error_uni32_invalid, error_utf8_invalid1)
	(error_utf8_invalid2, error_utf8_invalid3, error_utf8_invalid4)
	(error_nls_invalid): signal CHARSET-TYPE-ERROR instead of ERROR
	(base64_wcstombs, error_unencodable, error_incomplete)
	(error_uni32_invalid, error_utf8_invalid1, error_utf8_invalid2)
	(error_utf8_invalid3, error_utf8_invalid4): print the caller

2008-07-13  Sam Steingold  <sds@gnu.org>

	* init.lisp (search-file): list matching files from the FIRST
	directory containing any matching file, because otherwise every
	load will mean a full traversal of ~/lisp/**/

2008-07-13  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (*load-logical-pathname-translations-database*):
	since SEARCH-FILE now handles both files and directories
	similarly, only one element is needed
	(load-logical-pathname-translations): updated for the search-file